--- a/vehicle-service-spring-app/src/main/resources/application.properties
+++ b/vehicle-service-spring-app/src/main/resources/application.properties
@@ -1,8 +1,8 @@
 server.port=8081
 
-spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.PostgreSQLDialect
-spring.datasource.url=jdbc:postgresql://127.0.0.1:5432/spring-app
-spring.datasource.username=m003
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
+spring.datasource.url=jdbc:postgresql://localhost:5432/spring-app
+spring.datasource.username=postgres
 spring.datasource.password=Welcome2RB
 spring.jpa.hibernate.ddl-auto=create-drop
 
