Fixed unit tests of Quarkus. Removed creating schema on startup. Enabled creating uberJar in Quarkus

--- a/vehicle-service-quarkus-app/src/main/resources/application.properties
+++ b/vehicle-service-quarkus-app/src/main/resources/application.properties
@@ -7,4 +7,7 @@ quarkus.datasource.password=Welcome2RB
 quarkus.datasource.min-size=3
 quarkus.datasource.max-size=13
 
-quarkus.flyway.migrate-at-start=true
+#quarkus.flyway.migrate-at-start=true
+
+
+quarkus.package.uber-jar=true
