--- a/vehicle-service-spring-app/src/main/resources/application.properties
+++ b/vehicle-service-spring-app/src/main/resources/application.properties
@@ -4,6 +4,6 @@ spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
 spring.datasource.url=jdbc:postgresql://localhost:5432/spring-app
 spring.datasource.username=postgres
 spring.datasource.password=Welcome2RB
-spring.jpa.hibernate.ddl-auto=create-drop
+spring.jpa.hibernate.ddl-auto=none
 
 spring.datasource.initialization-mode=always
