Changed DB appintments to quarkus-app (for both Quarkus and Spring application).
Using schema generation in Quarkus with import.sql instead of Flyway.

--- a/vehicle-service-spring-app/src/main/resources/application.properties
+++ b/vehicle-service-spring-app/src/main/resources/application.properties
@@ -1,9 +1,9 @@
 server.port=8081
 
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
-spring.datasource.url=jdbc:postgresql://localhost:5432/spring-app
-spring.datasource.username=postgres
-spring.datasource.password=Welcome2RB
-spring.jpa.hibernate.ddl-auto=none
+spring.datasource.url=jdbc:postgresql://localhost:5432/quarkus-app
+spring.datasource.username=quarkus-app
+spring.datasource.password=quarkus-app
+spring.jpa.hibernate.ddl-auto=create-drop
 
 spring.datasource.initialization-mode=always
