--- a/vehicle-service-quarkus-app/src/main/resources/application.properties
+++ b/vehicle-service-quarkus-app/src/main/resources/application.properties
@@ -2,12 +2,10 @@ quarkus.http.port=9090
 
 quarkus.datasource.url=jdbc:postgresql://localhost:5432/quarkus-app
 quarkus.datasource.driver=org.postgresql.Driver
-quarkus.datasource.username=postgres
-quarkus.datasource.password=Welcome2RB
-quarkus.datasource.min-size=3
-quarkus.datasource.max-size=13
+quarkus.datasource.username=quarkus-app
+quarkus.datasource.password=quarkus-app
 
-#quarkus.flyway.migrate-at-start=true
-
+quarkus.hibernate-orm.database.generation=drop-and-create
+quarkus.hibernate-orm.sql-load-script=import.sql
 
 quarkus.package.uber-jar=true
