Further enhancements of the project
* Add logging to the project
* Replace List with Set so only unique Vehicles/Ecus/Softwares are handled by the server

--- a/update-service/src/main/resources/application.properties
+++ b/update-service/src/main/resources/application.properties
@@ -1,3 +1,5 @@
 spring.h2.console.enabled=true
-
 spring.jpa.hibernate.ddl-auto=create
+
+#loggers configuration
+logging.level.com.demo.server=debug
