--- a/update-service/pom.xml
+++ b/update-service/pom.xml
@@ -89,6 +89,11 @@
 			<artifactId>springfox-swagger-ui</artifactId>
 			<version>2.9.2</version>
 		</dependency>
+		<dependency>
+			<groupId>io.github.microutils</groupId>
+			<artifactId>kotlin-logging</artifactId>
+			<version>1.7.8</version>
+		</dependency>
 	</dependencies>
 
 	<build>
