Added unit tests, VehicleService and new endpoint /vehicles/{id}/ecu

--- a/vehicle-service-quarkus-app/src/main/resources/application.properties
+++ b/vehicle-service-quarkus-app/src/main/resources/application.properties
@@ -8,4 +8,6 @@ quarkus.datasource.password=quarkus-app
 quarkus.hibernate-orm.database.generation=drop-and-create
 quarkus.hibernate-orm.sql-load-script=import.sql
 
+%test.quarkus.hibernate-orm.database.generation=none
+
 quarkus.package.uber-jar=true
