--- a/vehicle-service-quarkus-app/src/main/resources/application.properties
+++ b/vehicle-service-quarkus-app/src/main/resources/application.properties
@@ -11,3 +11,6 @@ quarkus.hibernate-orm.sql-load-script=import.sql
 %test.quarkus.hibernate-orm.database.generation=none
 
 quarkus.package.uber-jar=true
+
+quarkus.log.level=INFO
+quarkus.log.category."com.redbend".level=DEBUG
